<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:contentDescription="@string/smart_greenhouse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleName"
        android:text="@string/smart_greenhouse"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/logo"
        android:gravity="center_horizontal"
        android:layout_marginLeft="100dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:text="@string/username"
        android:layout_below="@+id/titleName"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userText"
        android:hint="@string/user"
        android:layout_below="@id/userName"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="155dp"
        android:textSize="10sp"
        android:layout_marginLeft="155dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passName"
        android:text="@string/password"
        android:layout_below="@+id/userText"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passText"
        android:hint="@string/password"
        android:layout_below="@+id/passName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="155dp"
        android:textSize="10sp"
        android:layout_marginLeft="155dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/btnName"
        android:layout_below="@+id/passText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="155dp"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="155dp"
        android:background="@color/colorGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot"
        android:text="@string/forgot"
        android:textSize="15sp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>