<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="270dp"
    android:background="@color/colorBackground"
    android:padding="25dp">


    <TextView
        android:id="@+id/fanSettingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan_setting"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/fanSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan_speed"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fanSettingText"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/fanDataSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fanDataSpeed"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@+id/fanSettingText"
        android:layout_toRightOf="@+id/fanSpeedText"
        android:layout_toEndOf="@+id/fanSpeedText"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <SeekBar
        android:id="@+id/fanSpeedSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_below="@+id/fanSettingText"
        android:layout_toRightOf="@+id/fanDataSpeed"
        android:layout_toEndOf="@+id/fanDataSpeed"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/fanTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan_timer"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/fanSpeedText"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/fanDataTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fanDataTimer"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/fanDataSpeed"
        android:layout_toRightOf="@+id/fanTimerText"
        android:layout_toEndOf="@+id/fanTimerText"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"/>

    <SeekBar
        android:id="@+id/fanTimerSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_below="@+id/fanSpeedSeekBar"
        android:layout_toRightOf="@+id/fanDataTimer"
        android:layout_toEndOf="@+id/fanDataTimer"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/BtnReset"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/reset"
        android:layout_below="@id/fanTimerText"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:layout_below="@id/fanTimerText"
        android:layout_toRightOf="@+id/BtnReset"
        android:layout_toEndOf="@+id/BtnReset"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

</RelativeLayout>