<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:background="@color/colorBackground"
    android:padding="25dp">


    <TextView
        android:id="@+id/sprinklerSettingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkler_setting"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/sprinklerSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkler_speed"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sprinklerSettingText"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/sprinklerDataSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinklerDataSpeed"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@+id/sprinklerSettingText"
        android:layout_toRightOf="@+id/sprinklerSpeedText"
        android:layout_toEndOf="@+id/sprinklerSpeedText"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <SeekBar
        android:id="@+id/sprinklerSpeedSeekBar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_below="@+id/sprinklerSettingText"
        android:layout_toRightOf="@+id/sprinklerDataSpeed"
        android:layout_toEndOf="@+id/sprinklerDataSpeed"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/sprinklerTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkler_timer"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/sprinklerSpeedText"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/sprinklerDataTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinklerDataTimer"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/sprinklerDataSpeed"
        android:layout_toRightOf="@+id/sprinklerTimerText"
        android:layout_toEndOf="@+id/sprinklerTimerText"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"/>

    <SeekBar
        android:id="@+id/sprinklerTimerSeekBar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_below="@+id/sprinklerSpeedSeekBar"
        android:layout_toRightOf="@+id/sprinklerDataTimer"
        android:layout_toEndOf="@+id/sprinklerDataTimer"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnResetSprinkler"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/reset"
        android:layout_below="@id/sprinklerTimerText"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <Button
        android:id="@+id/btnSaveSprinkler"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:layout_below="@id/sprinklerTimerText"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/btnResetSprinkler"
        android:layout_toEndOf="@+id/btnResetSprinkler"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
</RelativeLayout>